preparing to release abcssp

--- a/abcssp/analysis/mpf.tex
+++ b/abcssp/analysis/mpf.tex
@@ -24,7 +24,7 @@
 
 %%---------------------------------------
 %\begin{definition}
-%\citetbl{
+%\footnote{
 %  \citerpgc{recasens2010}{83}{3642162215}{Definition 4.3}
 %  }
 %\label{def:metric_transform}
@@ -55,7 +55,7 @@
 %%=======================================
 %%--------------------------------------
 %\begin{definition}
-%\citetbl{
+%\footnote{
 %  \citerpc{thron1966}{153}{definition 19.4},
 %  \citerpgc{giles1987}{124}{0521359287}{Definition 6.22},
 %  \citerpgc{khamsi2001}{15}{0471418250}{Definition 2.4},
@@ -74,7 +74,7 @@
 %
 %%--------------------------------------
 %\begin{theorem}
-%\citetbl{
+%\footnote{
 %  \citerpc{thron1966}{153}{theorem 19.5}
 %  }
 %\label{thm:isometry_inv}
@@ -98,7 +98,7 @@
 %\begin{theorem}[\thm{Pullback metric}/\thm{$\fg$-transform metric}]
 %\label{thm:met_sumpf}
 %\label{thm:pullback}
-%\citetbl{
+%\footnote{
 %  \citerpg{deza2009}{81}{3642002331}
 %  %\url{http://groups.google.com/group/sci.math/msg/6d091dfa5061cc08}
 %  }
@@ -159,7 +159,7 @@
 %=======================================
 %---------------------------------------
 \begin{definition}
-\citetbl{
+\footnote{
   \citerpc{vallin1999}{849}{Definition 1.1},
   \citerp{corazza1999}{309},
   \citerpg{deza2009}{80}{3642002331}
@@ -186,7 +186,7 @@ Let $\sssetM$ be the set of all \structe{metric space}s \xref{def:metric} on a s
 
 %---------------------------------------
 \begin{theorem}[necessary conditions]
-\citetbl{
+\footnote{
   \citerpc{corazza1999}{310}{Proposition 2.1},
   \citerpg{deza2009}{80}{3642002331}
   }
@@ -260,7 +260,7 @@ of a function $\fphi$.
 \pref{thm:met_fod} (next theorem) presents some sufficient conditions for a function to be metric preserving.
 %---------------------------------------
 \begin{theorem}[sufficient conditions]
-\citetbl{
+\footnote{
   \citerc{corazza1999}{Proposition 2.3},
   \citerpg{deza2009}{80}{3642002331},
   \citerpgc{kelley1955}{131}{0387901256}{Problem C}
@@ -361,7 +361,7 @@ Let $\fphi$ be a function in $\clFrr$.
 \end{figure}
 %---------------------------------------
 \begin{example}[\exm{$\alpha$-scaled metric}/\exm{dilated metric}]
-\citetbl{
+\footnote{
   \citerpg{deza2006}{44}{0444520872}
   }
 \index{metrics!$\alpha$-scaled metric}
@@ -389,7 +389,7 @@ The proofs for \pref{ex:mpf_ascaled}--\prefpp{ex:mpf_x1x2} follow from \prefpp{t
 
 %---------------------------------------
 \begin{example}[\exm{power transform metric}/\exm{snowflake transform metric}]
-\citetbl{
+\footnote{
   \citerpg{deza2009}{81}{3642002331},
   \citerpg{deza2006}{45}{0444520872}
   }
@@ -415,7 +415,7 @@ Let $\metspaceX$ be a \structe{metric space} \xref{def:metric}.
 
 %---------------------------------------
 \begin{example}[\exmd{$\alpha$-truncated metric}/\exmd{radar screen metric}]
-\citetbl{
+\footnote{
   \citerp{giles1987}{33},
   \citerppg{deza2006}{242}{243}{0444520872}
   }
@@ -441,7 +441,7 @@ Let $\metspaceX$ be a \structe{metric space} \xref{def:metric}.
 
 %---------------------------------------
 \begin{example}[\exm{bounded metric}]
-\citetbl{
+\footnote{
   \citerp{vallin1999}{849},
   \citerpg{ab}{39}{0120502577} 
   }
@@ -466,7 +466,7 @@ by \prefpp{thm:met_fod}.
 
 %---------------------------------------
 \begin{example}[\exmd{discrete metric preserving function}]
-\citetbl{
+\footnote{
   \citerp{corazza1999}{311}
   }
 \label{ex:mpf_discrete}
@@ -526,7 +526,7 @@ Let $\fphi$ be a function in $\clFrr$.
 \end{figure}
 %---------------------------------------
 \begin{example}
-\citetbl{
+\footnote{
   \citerppc{greenhoe2015sto}{10}{11}{Theorem 4.16}
   }
 
@@ -580,7 +580,7 @@ Let $\fphi$ be a function in $\clFrr$.
 
 %---------------------------------------
 \begin{example}
-\citetbl{
+\footnote{
   \citerp{corazza1999}{309},
   \citerpc{dobos1998}{25}{Example~1},
   \citer{juza1956}
@@ -631,7 +631,7 @@ Let $\fphi$ be a function in $\clFrr$.
 
 %---------------------------------------
 \begin{theorem}[Fr{\'e}chet product metric]
-\citetbl{
+\footnote{
   \citerpg{deza2006}{47}{0444520872},
   \citerpg{deza2009}{84}{3642002331},
   \citerppgc{steen1978}{64}{65}{0387903127}{Example 37.7},
