--- a/abcssp/intro/filter.tex
+++ b/abcssp/intro/filter.tex
@@ -110,7 +110,7 @@ illustrated below:
 
 %---------------------------------------
 \begin{definition}
-\citetbl{
+\footnote{
   \citePpc{blackman1958mar}{502}{B.5 Particular Pairs of Windows},
   \citerpc{blackman1959}{98}{B.5 Particular Pairs of Windows},
   \citerpg{oppenheim1999}{763}{0137549202},
