--- a/abcssp/ssp/ssphp.tex
+++ b/abcssp/ssp/ssphp.tex
@@ -82,13 +82,13 @@
         \begin{enumerate}
           \item Using the \fncte{Euclidean metric} rather than the \fncte{Lagrange arc distance} 
                 in \pref{item:wrdie_hp_R3_rect50_larc} yields results that are 
-                \textbf{identical}.\citetbl{\seessp{wrdie_hp_1200m50.xlg}} %2016 June 08 Wednesday 11:27:40 PM UTC
+                \textbf{identical}.\footnote{\seessp{wrdie_hp_1200m50.xlg}} %2016 June 08 Wednesday 11:27:40 PM UTC
 
           \item \label{item:wrdie_hp_R3_hann50_euclid}
                 Using the \fncte{Euclidean metric} rather than the \fncte{Lagrange arc distance} 
                 in \pref{item:wrdie_hp_R3_hann50_larc}
                 yields results that \textbf{differ} at 4 locations 
-                (approximately 0.007\% of all the locations).\citetbl{\seessp{wrdie_hp_1200m50.xlg}} %2016 June 08 Wednesday 11:27:40 PM UTC
+                (approximately 0.007\% of all the locations).\footnote{\seessp{wrdie_hp_1200m50.xlg}} %2016 June 08 Wednesday 11:27:40 PM UTC
 
         \end{enumerate}
 
@@ -180,7 +180,7 @@
   \item \label{item:wspin_hp_rect50_R2_euclid}
         Replacing the \fncte{Lagrange arc distance} by the \fncte{Euclidean metric} as in \pref{item:wspin_hp_rect50_R2_larc}
         yields a sequence that differs at a total of 272 locations 
-        (approximately 0.5\% of the locations).\citetbl{\seessp{wspin_hp_1200m50.xlg}} %2016 June 08 Wednesday 11:31:09 PM UTC
+        (approximately 0.5\% of the locations).\footnote{\seessp{wspin_hp_1200m50.xlg}} %2016 June 08 Wednesday 11:31:09 PM UTC
 
   \item \label{item:wspin_hp_hann50_R2_larc}
         If instead of using the rectangular filtering (as in \pref{item:wspin_hp_rect50_R2_larc}),
@@ -206,7 +206,7 @@
         Replacing the \fncte{Lagrange arc distance} by the \fncte{Euclidean metric} in \pref{item:wspin_hp_hann50_R2_larc}
         %yields a very similar result: % but different result, as illustrated next:
         yields a sequence that differs at a total of 3 locations 
-        (approximately 0.005\% of the locations).\citetbl{\seessp{wspin_hp_1200m50.xlg}} %2016 June 08 Wednesday 11:31:09 PM UTC
+        (approximately 0.005\% of the locations).\footnote{\seessp{wspin_hp_1200m50.xlg}} %2016 June 08 Wednesday 11:31:09 PM UTC
         %\\\begin{tabular}{|>{\scs}c|>{\scs}c|}
         %     \hline
         %     \includegraphics{ssp/plots/wspin_hp_1200_R2_hann50_euclid_histo.pdf}
@@ -307,11 +307,11 @@
     \begin{enumerate}
       \item using the \fncte{Lagrange arc distance} rather than the \fncte{Euclidean metric} in 
             \prefp{item:wdie_hp_R6_rect16_euclid} yields results that are 
-            \textbf{identical}.\citetbl{\seessp{wdie_hp_1200m16.xlg}} %2016 June 08 Wednesday 11:34:23 PM UTC
+            \textbf{identical}.\footnote{\seessp{wdie_hp_1200m16.xlg}} %2016 June 08 Wednesday 11:34:23 PM UTC
       \item using the \fncte{Lagrange arc distance} rather than the \fncte{Euclidean metric} in 
             \prefp{item:wdie_hp_R6_hann16_euclid} yields results that \textbf{differ} at 17 locations
             (differ at approximately 0.09\% of the total possible $M(N+2)=16(1200+2)=19232$ 
-            locations).\citetbl{\seessp{wdie_hp_1200m16.xlg}} %2016 June 08 Wednesday 11:34:23 PM UTC
+            locations).\footnote{\seessp{wdie_hp_1200m16.xlg}} %2016 June 08 Wednesday 11:34:23 PM UTC
     \end{enumerate}
 
   \item Empirical evidence observed in items
