--- a/abcssp/ssp/ssplp.tex
+++ b/abcssp/ssp/ssplp.tex
@@ -117,11 +117,11 @@
         More details follow:
     \begin{enumerate}
       \item Using the \fncte{Euclidean metric} in $\R^3$ rather than the \fncte{Lagrange arc distance} in \pref{item:rdie_lp_R3_rect16_larc}
-            yields sequences that are \textbf{identical}.\citetbl{\seessp{rdie_lp_12000m16.xlg}}
+            yields sequences that are \textbf{identical}.\footnote{\seessp{rdie_lp_12000m16.xlg}}
 
       \item Using the \fncte{Euclidean metric} in \pref{item:rdie_lp_R3_hann16_larc} rather than the \fncte{Lagrange arc distance} 
             yields sequences that \textbf{differ} at 6 locations out of $N+M+M-1=12000+16+16-1=12031$ locations
-            (differ at approximately 0.05\% of the locations):\citetbl{\seessp{rdie_lp_12000m16.xlg}}
+            (differ at approximately 0.05\% of the locations):\footnote{\seessp{rdie_lp_12000m16.xlg}}
             \\\indentx\begin{tabstr}{0.75}\begin{tabular}{|c|c|c|}
                          \hline% 2016 June 08 Wednesday 11:03:38 PM UTC
                            n   & Euclidean & Lagrange
@@ -134,12 +134,12 @@
 
       \item Using the \fncte{Euclidean metric} in $\R^3$ rather than the \fncte{Lagrange arc distance} as in 
             \pref{item:rdie_lp_R3_hann50_larc} (length 50 Hanning filter)
-            yields sequences that are \emph{identical}.\citetbl{\seessp{rdie_lp_12000m50.xlg}} % 2016 June 08 Wednesday 11:07:28 PM UTC
+            yields sequences that are \emph{identical}.\footnote{\seessp{rdie_lp_12000m50.xlg}} % 2016 June 08 Wednesday 11:07:28 PM UTC
 
       \item Using the \fncte{Euclidean metric} in $\R^3$ rather than the \fncte{Lagrange arc distance} as 
             in \pref{item:rdie_lp_R3_rect50_larc} (length 50 rectangular filter)
             \textbf{differ} at 85 locations out of $N+M+M-1=12000+50+50-1=12099$ locations
-            (differ at approximately 0.7\% of the locations).\citetbl{\seessp{rdie_lp_12000m50.xlg}} % 2016 June 08 Wednesday 11:07:28 PM UTC
+            (differ at approximately 0.7\% of the locations).\footnote{\seessp{rdie_lp_12000m50.xlg}} % 2016 June 08 Wednesday 11:07:28 PM UTC
     \end{enumerate}
 
 \end{enumerate}
@@ -204,7 +204,7 @@
 
   \item Using the \fncte{Euclidean metric} rather than the \fncte{Lagrange arc distance} as in \pref{item:spin_lp_R2_rect16_larc}
         results in a sequence that differs at 99 different locations out of $N+M+M-1=12000+16+15=12031$ locations
-        (approximately 0.8\% of the locations differ).\citetbl{\seessp{spin_lp_12000m16.xlg}} % 2016 June 08 Wednesday 11:11:16 PM UTC
+        (approximately 0.8\% of the locations differ).\footnote{\seessp{spin_lp_12000m16.xlg}} % 2016 June 08 Wednesday 11:11:16 PM UTC
         \\\begin{tabular}{|>{\scs}c|>{\scs}c|}
              \hline
              \includegraphics{ssp/plots/spin_lp_12000_R2_rect16_euclid_histo.pdf}%
@@ -364,12 +364,12 @@
     \begin{enumerate}
       \item using the \fncte{Lagrange arc distance} rather than the \fncte{Euclidean metric} in 
             \prefp{item:fdie_lp_R6_rect16_euclid} yields results that are 
-            \textbf{identical}\citetbl{\seessp{fdie_lp_12000m16.xlg}} %2016 June 08 Wednesday 11:18:43 PM UTC
+            \textbf{identical}\footnote{\seessp{fdie_lp_12000m16.xlg}} %2016 June 08 Wednesday 11:18:43 PM UTC
 
       \item using the \fncte{Lagrange arc distance} rather than the \fncte{Euclidean metric} in 
             \prefp{item:fdie_lp_R6_hann16_euclid} yields results that \textbf{differ} at 5 locations
             (differ at approximately 0.04\% of the total possible 
-            $N+M+M-1=12000+16+16-1=12031$ locations):\citetbl{\seessp{fdie_lp_12000m16.xlg}} %2016 June 08 Wednesday 11:18:43 PM UTC
+            $N+M+M-1=12000+16+16-1=12031$ locations):\footnote{\seessp{fdie_lp_12000m16.xlg}} %2016 June 08 Wednesday 11:18:43 PM UTC
             \\\indentx\begin{tabstr}{0.75}\begin{tabular}[t]{|c|c|c|}
                          \hline
                            n   & Euclidean & Lagrange
@@ -390,12 +390,12 @@
 
       \item using the \fncte{Lagrange arc distance} rather than the \fncte{Euclidean metric} in 
             \prefp{item:fdie_lp_R6_hann50_euclid} yields results that are 
-            \textbf{identical}\citetbl{\seessp{fdie_lp_12000m50.xlg}} %2016 June 08 Wednesday 11:23:15 PM UTC
+            \textbf{identical}\footnote{\seessp{fdie_lp_12000m50.xlg}} %2016 June 08 Wednesday 11:23:15 PM UTC
 
       \item using the \fncte{Lagrange arc distance} rather than the \fncte{Euclidean metric} in 
             \prefp{item:fdie_lp_R6_rect50_euclid} yields results that \textbf{differ} at 289 locations
             (differ at approximately 2.4\% of the total possible 
-            $12031$ locations):\citetbl{\seessp{fdie_lp_12000m50.xlg}} %2016 June 08 Wednesday 11:23:15 PM UTC
+            $12031$ locations):\footnote{\seessp{fdie_lp_12000m50.xlg}} %2016 June 08 Wednesday 11:23:15 PM UTC
     \end{enumerate}
 
   \item Empirical evidence observed in items
