preparing abcstat book

--- a/common/info.tex
+++ b/common/info.tex
@@ -216,7 +216,7 @@ contained in the ordered pair $(X,Y)$.
 %--------------------------------------
 \begin{theorem}
 %--------------------------------------
-\formbox{ \iH(X,Y) = \iH(Y,X)  }
+\thmbox{ \iH(X,Y) = \iH(Y,X)  }
 \end{theorem}
 \begin{proof}
 \begin{eqnarray*}
@@ -234,7 +234,7 @@ contained in the ordered pair $(X,Y)$.
 \index{Entropy chain rule}
 \index{theorems!Entropy chain rule}
 %--------------------------------------
-\formbox{
+\thmbox{
   \begin{array}{rcl}
     \iH(X,Y) &=& \ds \iH(X|Y) + \iH(Y)  \\
              &=& \ds \iH(Y|X) + \iH(X). \\
@@ -272,7 +272,7 @@ contained in the ordered pair $(X,Y)$.
 %--------------------------------------
 \begin{theorem}
 %--------------------------------------
-\formbox{
+\thmbox{
   \begin{array}{rcl}
     \iI(X;Y) &=& \iH(X) - \iH(X|Y)           \\
     \iI(X;Y) &=& \iH(Y) - \iH(Y|X)           \\
@@ -325,7 +325,7 @@ contained in the ordered pair $(X,Y)$.
 \index{information chain rule}
 \index{theorems!information chain rule}
 %--------------------------------------
-\formbox{
+\thmbox{
   \iI(X_1,X_2,\ldots,X_N;Y)
     = \sum_{n=1}^{N-1}\iI(X_n|X_{n+1},\ldots,X_N) 
         + \iI(X_N) 
@@ -355,7 +355,7 @@ contained in the ordered pair $(X,Y)$.
   \citerp{cover}{26}
   }
 %---------------------------------------
-\formbox{
+\thmbox{
 \begin{array}{rcl}
   \iD{\pp_1}{\pp_2} &\ge& 0  \\
   \iI(X;Y)          &\ge& 0
@@ -531,7 +531,7 @@ Let $\opC:X\to Y$ be a channel operation with $X,Y\in\{0,1\}$ and
   \pP{Y=1|X=0} &=& \pP{Y=0|X=1} \eqd \epsilon
 \end{eqnarray*}
 Then
-\formbox{\begin{array}{rcl}
+\thmbox{\begin{array}{rcl}
   \pP{Y=1} &=& \epsilon+p-2\epsilon p
 \\
   \pP{Y=0} &=& 1-p-\epsilon +2\epsilon p
@@ -704,68 +704,68 @@ Note:
 \begin{theorem}
 %--------------------------------------
 Let $Z\sim\pN{0}{\sigma^2}$. Then
-\formbox{  \iH(Z) = \frac{1}{2}\log_2 2\pi e \sigma^2  }
+\thmbox{  \iH(Z) = \frac{1}{2}\log_2 2\pi e \sigma^2  }
 \end{theorem}
 \begin{proof}
-\begin{eqnarray*}
+\begin{align*}
   \iH(Z)
-    &=& \pEz \log \frac{1}{\pp(Z)}
-  \\&=& -\pEz \log \pp(z) 
-  \\&=& -\pEz
-         \log \left[\frac{1}{\sqrt{2\pi\sigma^2}}e^{\frac{-z^2}{2\sigma^2}} \right] 
-  \\&=& -\pEz \left[
-        -\frac{1}{2}\log(2\pi\sigma^2) 
-        + \frac{-z^2}{2\sigma^2} \log e 
-        \right] 
-  \\&=& \frac{1}{2} \pEz \left[
-        \log(2\pi\sigma^2) 
-        + \frac{\log e}{\sigma^2}z^2  
-        \right] 
-  \\&=& \frac{1}{2} \left[
-        \log(2\pi\sigma^2) + \frac{\log e}{\sigma^2}\pEz z^2  
-        \right] 
-  \\&=& \frac{1}{2} \left[
-        \log(2\pi\sigma^2) + \frac{\log e}{\sigma^2}(\sigma^2+0)
-        \right] 
-  \\&=& \frac{1}{2} \left[
-        \log(2\pi\sigma^2) + \log e
-        \right] 
-  \\&=& \frac{1}{2} \log(2\pi e\sigma^2) 
-\end{eqnarray*}
+    &= \pEz \log \frac{1}{\pp(Z)}
+  \\&= -\pEz \log \pp(z) 
+  \\&= -\pEz
+        \log \left[\frac{1}{\sqrt{2\pi\sigma^2}}e^{\frac{-z^2}{2\sigma^2}} \right] 
+  \\&= -\pEz \left[
+       -\frac{1}{2}\log(2\pi\sigma^2) 
+       + \frac{-z^2}{2\sigma^2} \log e 
+       \right] 
+  \\&= \frac{1}{2} \pEz \left[
+       \log(2\pi\sigma^2) 
+       + \frac{\log e}{\sigma^2}z^2  
+       \right] 
+  \\&= \frac{1}{2} \left[
+       \log(2\pi\sigma^2) + \frac{\log e}{\sigma^2}\pEz z^2  
+       \right] 
+  \\&= \frac{1}{2} \left[
+       \log(2\pi\sigma^2) + \frac{\log e}{\sigma^2}(\sigma^2+0)
+       \right] 
+  \\&= \frac{1}{2} \left[
+       \log(2\pi\sigma^2) + \log e
+       \right] 
+  \\&= \frac{1}{2} \log(2\pi e\sigma^2) 
+\end{align*}
 \end{proof}
 
 %--------------------------------------
 \begin{theorem}
+\footnote{
+  \citerp{cover}{241}
+  }
 %--------------------------------------
 Let $Y=X+Z$ be a Gaussian channel with $\pE X^2=P$ and
 $Z\sim\pN{0}{\sigma^2}$. Then
-\formbox{ 
+\thmbox{ 
   \iI(X;Y) \le \frac{1}{2}\log\left( 1 + \frac{P}{\sigma^2}\right) = \iC 
   \hspace{1cm}\mbox{bits per usage}
   }
 \end{theorem}
-\begin{proof}
-No proof at this time. \attention
-
-Reference: \cite[page 241]{cover}
-\end{proof}
 
 %--------------------------------------
 \begin{theorem}
+\footnote{
+  \citerp{cover}{250}
+  }
 %--------------------------------------
 Let $Y=X+Z$ be a bandlimited Gaussian channel with $\pE X^2=P$ and
 $Z\sim\pN{0}{\sigma^2}$ and bandwidth $W$. Then
-\formbox{ 
+\thmbox{ 
   \iC = W \log\left( 1 + \frac{P}{\sigma^2 W}\right) 
-  \hspace{1cm}\mbox{bits per second}
+  \qquad\mbox{bits per second}
   }
 \end{theorem}
-\begin{proof}
-By \prefpp{thm:nst}, $R_c \le 2W$.
-No complete proof at this time. \attention
-
-Reference: {\citerp{cover}{250}}
-\end{proof}
+%\begin{proof}
+%By \prefpp{thm:nst}, $R_c \le 2W$.
+%No complete proof at this time. \attention
+%
+%\end{proof}
 
 
 
