--- a/common/random.tex
+++ b/common/random.tex
@@ -38,18 +38,12 @@
   \citerp{papoulis}{285}
   }
 %---------------------------------------
-Let $\ps$ be a \structe{probability space}.%
-  %\footnote{\hie{probabililty space}: \prefp{def:prob_space}}
-\defboxp{
-\begin{liste}
-   \item the function $\rvx:\pso\to\R$ is a \hid{random variable}
-         %\citep{papoulis}{63}
-   \item the function $\rvy:\R\times\pso\to\R$ is a \hid{random process}.
-         %\citep{papoulis}{285}
-\end{liste}
-}
+Let $\ps$ be a \structe{probability space}.\\
+\defboxt{
+  The function $\rvx:\pso\to\R$ is a \fnctd{random variable}.\\
+  The function $\rvy:\R\times\pso\to\R$ is a \fnctd{random process}.
+  }
 \end{definition}
-
 
 The random process $\rvx(t,\omega)$, where $t$ commonly represents time
 and $\omega\in\pso$ is an outcome of an experiment,
