update prob/stat material

--- a/common/prbspace.tex
+++ b/common/prbspace.tex
@@ -71,10 +71,10 @@ A sigma-algebra is a subset structure that is closed under set complement.
 A set together with a sigma-algebra is called a \hie{measurable space}.
 And a set together with a sigma-algebra and a \hie{measure} on that sigma-algebra
 is called a \hie{measure space}.
-\footnote{\begin{tabular}[t]{>{\em}l<{:}>{Definition }l>{page }l}
-  measure           & \ref{def:measure}       & \pageref{def:measure}       \\
-  $\sigma$-algebra  & \ref{def:set_sigma-algebra} & \pageref{def:set_sigma-algebra} \\
-  measure space     & \ref{def:mspace}        & \pageref{def:mspace}
+\footnote{\begin{tabular}[t]{l<{:}ll}
+  \fncte{measure}             & \pref{def:measure} & \prefpo{def:measure}\\
+  \structe{\txsigma-algebra}  & \pref{def:sigalg}  & \prefpo{def:sigalg} \\
+  \structe{measure space}     & \pref{def:mspace}  & \prefpo{def:mspace}
   \end{tabular}}
 
 %The next definition presents a very important measure space---the \hie{probability space}.
@@ -88,7 +88,7 @@ is called a \hie{measure space}.
 %  \mc{2}{l}{The triple $\ps$ is a \hid{probability space} over $\pso$ where}
 %  \\
 %  $\imark$ $\pso$ is the set of all possible {\bf outcomes} of an experiment \\
-%  $\imark$ $\pse$ is a $\sigma$-algebra on $\pso$  \\
+%  $\imark$ $\pse$ is a \txsigma-algebra on $\pso$  \\
 %  $\imark$ $\psp:\pse\to[0,1]$ is a measure on $\pse$.
 %\end{tabular}}
 %\end{definition}
@@ -223,9 +223,9 @@ $\left(\setn{\text{\diceA,\diceB,\diceC,\diceD}}\right)$
 a value in the set $\{1,2,3,4\}$)
 and the last three
 $\left(\setn{\text{\diceD,\diceE,\diceF}}\right)$
-However, these events do not by themselves form a $\sigma$-algebra.
+However, these events do not by themselves form a \txsigma-algebra.
 Rather under the $\cap$ and $\cup$ operations, these two events generate
-a total of eight possible events that together form a $\sigma$-algebra.
+a total of eight possible events that together form a \txsigma-algebra.
 The resulting measure space $\ps$ is
 \exbox{\begin{array}{ll}
   \pso &= \left\{ \text{\diceA,\diceB,\diceC,\diceD,\diceE,\diceF} \right\}
@@ -265,8 +265,8 @@ The resulting measure space $\ps$ is
 \end{array}}
 \end{example}
 
-Why go through all the trouble of requiring a $\sigma$-algebra?
-Having a $\sigma$-algebra in place ensures that anything we might possibly
+Why go through all the trouble of requiring a \txsigma-algebra?
+Having a \txsigma-algebra in place ensures that anything we might possibly
 want to measure {\em can} be measured.
 It makes sure all possible combinations are taken into account.
 And why go through the additional trouble of requiring a measure space?
@@ -274,7 +274,7 @@ With a measure space available, expressing the measure over a complex
 set is often greatly simplified because the measure space provides nice
 algebraic properties (namely the $\sigma$-additive property.
 \pref{ex:prob_123456} (next) illustrates how a rather complex
-$\sigma$-algebra (64 elements) can be compactly represented in a measure space.
+\txsigma-algebra (64 elements) can be compactly represented in a measure space.
 %---------------------------------------
 \begin{example}
 \label{ex:prob_123456}
