--- a/common/random.tex
+++ b/common/random.tex
@@ -1344,38 +1344,14 @@ The \textbf{poles} of a rational expression are the roots of its denominator pol
 
 
 
-\begin{figure}[ht]\color{figcolor}
-\begin{center}
-\begin{fsL}
-\setlength{\unitlength}{0.2mm}
-\begin{picture}(300,300)(-150,-130)
-  %\graphpaper[10](0,0)(200,200)
-  \thinlines
-  \put(-130,   0){\line(1,0){260} }
-  \put(   0,-130){\line(0,1){260} }
-  \put( 140,   0){\makebox(0,0)[l]{$\Re$}}
-  \put(   0, 140){\makebox(0,0)[b]{$\Im$}}
-
-  \put(  30,  60){\makebox(0,0){$\times$}}
-  \put(  30,- 60){\makebox(0,0){$\times$}}
-  \put(- 20,  20){\makebox(0,0){$\times$}}
-  \put(- 20,- 20){\makebox(0,0){$\times$}}
-  \put(  70,  20){\circle{10}}
-  \put(  70,- 20){\circle{10}}
-  \put(- 80,  40){\circle{10}}
-  \put(- 80,- 40){\circle{10}}
-
- \input{../common/circ128.inc}
-\end{picture}
-\end{fsL}
-\caption{
-   Poles ($\times$) and zeros ($o$) of a minimum phase filter
-   \label{fig:w_pz_minphase}
-   }
-\end{center}
+\begin{figure}[h]
+  \centering
+  \includegraphics{graphics/pz_minphase.pdf}
+  \caption{
+     Poles ($\times$) and zeros ($o$) of a \prope{minimum phase} filter
+     \label{fig:w_pz_minphase}
+     }
 \end{figure}
-
-
 %---------------------------------------
 \begin{definition}
 \index{minimum phase}
