--- a/common/sty/colors_rgb.sty
+++ b/common/sty/colors_rgb.sty
@@ -33,8 +33,9 @@
    \definecolor{dsblue} {rgb} { 0,    0.75, 1    }% deep sky blue, http://www.tayloredmktg.com/rgb/
    \definecolor{cyan}   {rgb} { 0     1,    1    }
    \definecolor{dcyan}  {rgb} { 0     0.5,    0.5    }
+   \definecolor{cyanb}  {rgb} { 0.5, 1, 1}% bright cyan
    \definecolor{green}  {rgb} { 0,    0.5,  0    }
-   %\definecolor{greenbright}{cmyk}{0.5,0,1,0}% Pantone 361 PC
+   \definecolor{greenb}{rgb}{0,1,0}% bright green
    \definecolor{greenbright}{rgb}{0,1,0}%
    \definecolor{dgreen} {rgb} { 0,    0.25,  0    }% dark green
    %\definecolor{lime}   {rgb} { 0,    1,    0    }
